force-app/main/default/objects/Case_Assignment_Rule__c/Case_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>Object used to assign case records. Criteria based on email address or association with a web form campaign record.</description>
    <label>Case Assignment Rule</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Case Assignment Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>