force-app/main/default/objects/Case_Assignment_Rule__c/fields/Associate_Case_to_Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Associate_Case_to_Active_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that indicates whether or not the case, when created, should be associated with an active Opportunity record.</description>
    <inlineHelpText>Check this box if this case assignment rule should also stamp an indicator on the Case to associate it with an Active Opportunity.</inlineHelpText>
    <label>Associate Case to Active Opportunity</label>
    <type>Checkbox</type>
</CustomField>