force-app/main/default/objects/Case_Assignment_Rule__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>[??] - ASU Campuses</description>
    <inlineHelpText>The ASU Campus that this email is associated with.</inlineHelpText>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>Havasu</fullName>
            </value>
            <value>
                <fullName>Polytechnic</fullName>
            </value>
            <value>
                <fullName>Tempe</fullName>
            </value>
            <value>
                <fullName>Thunderbird</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>