force-app/main/default/objects/Case_Assignment_Rule__c/fields/Case_Feed_Email_Template_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_Feed_Email_Template_URL__c</fullName>
    <description>This is a URL created via a formula. Use this link to verify that the ID entered in the Case Feed Email Template ID field accurately identifies your desired Template.</description>
    <formula>IF(
LEN(Case_Feed_Email_Template_Id__c)&lt;&gt;15
||
LEFT(Case_Feed_Email_Template_Id__c,3)&lt;&gt;"00X"
,
"Enter a valid ID in the Case Feed Email Template ID field"
,
HYPERLINK("/"&amp;Case_Feed_Email_Template_Id__c,"Click to View Associated Template")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a URL created via a formula. Use this link to verify that the ID entered in the Case Feed Email Template ID field accurately identifies your desired Template.</inlineHelpText>
    <label>Case Feed Email Template URL</label>
    <type>Text</type>
</CustomField>