force-app/main/default/objects/Case_Assignment_Rule__c/fields/Case_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Id__c</fullName>
    <description>Id of the Case record type that the case should be created as.</description>
    <inlineHelpText>The 15 character case sensitive Id of the record type associated with this assignment rule. This Id is shown immediately after "...salesforce.com/setup/ui/recordtypefields.jsp?id=" in the URL when viewing the record type.</inlineHelpText>
    <label>Case Record Type Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>