force-app/main/default/objects/Case_Assignment_Rule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>[??] - Category that is associated with this Case Assignment. Ensure that the value used here exists in Case "Category" Picklist, and that the spelling is identical.</description>
    <inlineHelpText>Enter the Category  that is associated with this Case Assignment. Ensure that the value used here exists in Case "Category" Picklist, and that the spelling is identical.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>