force-app/main/default/objects/Case_Assignment_Rule__c/fields/CC_Category__c.field-meta.xml
<CustomField>
    <fullName>CC_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case Classification Category field</description>
    <inlineHelpText>Lookup to the Case Classification Category field</inlineHelpText>
    <label>Case Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Classification__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Case_Classification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <filterItems>
            <field>Case_Classification__c.Parent__c</field>
            <operation>equals</operation>
            <valueField>$Source.CC_Functional_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Classification__c</referenceTo>
    <relationshipLabel>CAR (Category)</relationshipLabel>
    <relationshipName>Case_Assignment_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>