force-app/main/default/objects/Case_Assignment_Rule__c/fields/CC_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>CC_Functional_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case Classification Functional Group field</description>
    <inlineHelpText>Lookup to the Case Classification Functional Group field</inlineHelpText>
    <label>Case Functional Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Classification__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Case_Classification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Functional Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Classification__c</referenceTo>
    <relationshipLabel>CAR (Functional Group)</relationshipLabel>
    <relationshipName>Case_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>