force-app/main/default/objects/Case_Assignment_Rule__c/fields/Chatter_Notification_Group__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Notification_Group__c</fullName>
    <description>Chatter group be notified when a new case is created by email.</description>
    <inlineHelpText>Chatter group be notified when a new case is created by email.</inlineHelpText>
    <label>Chatter Notification Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>