force-app/main/default/objects/Case_Assignment_Rule__c/fields/CTPColumn__c.field-meta.xml
<CustomField>
    <fullName>CTPColumn__c</fullName>
    <description>This picklist lists the columns from the Case Transfer page. It is used to tell where a CAR list will be placed on that page.</description>
    <label>CTP Column</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Departments</fullName>
            </value>
            <value>
                <fullName>Colleges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>