force-app/main/default/objects/Case_Assignment_Rule__c/fields/CTPGroup__c.field-meta.xml
<CustomField>
    <fullName>CTPGroup__c</fullName>
    <description>This picklist lists the Group names for the Case Transfer Page.</description>
    <label>CTP Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Partnerships</fullName>
            </value>
            <value>
                <fullName>Academic Transfer Credit Solutions</fullName>
            </value>
            <value>
                <fullName>Access ASU Outreach</fullName>
            </value>
            <value>
                <fullName>Admission Services</fullName>
            </value>
            <value>
                <fullName>American Indian Student Support Services</fullName>
            </value>
            <value>
                <fullName>ASU@Lake Havasu</fullName>
            </value>
            <value>
                <fullName>ASU Family Programs</fullName>
            </value>
            <value>
                <fullName>ASU Local</fullName>
            </value>
            <value>
                <fullName>ASU Online</fullName>
            </value>
            <value>
                <fullName>ASU Salesforce Support</fullName>
            </value>
            <value>
                <fullName>ASU School of Life Sciences</fullName>
            </value>
            <value>
                <fullName>ASU-USA Pathways</fullName>
            </value>
            <value>
                <fullName>ASU Wellness</fullName>
            </value>
            <value>
                <fullName>Biosafety</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Canon (Print Anywhere)</fullName>
            </value>
            <value>
                <fullName>Career and Professional Development Services</fullName>
            </value>
            <value>
                <fullName>Changemaker Central</fullName>
            </value>
            <value>
                <fullName>College of ASU - Training</fullName>
            </value>
            <value>
                <fullName>College of Global Futures</fullName>
            </value>
            <value>
                <fullName>College of Health Solutions</fullName>
            </value>
            <value>
                <fullName>Curricular Activities and Actions</fullName>
            </value>
            <value>
                <fullName>Dean of Students</fullName>
            </value>
            <value>
                <fullName>Department of ASU - Training</fullName>
            </value>
            <value>
                <fullName>Design and the Arts</fullName>
            </value>
            <value>
                <fullName>Disability Resource Center</fullName>
            </value>
            <value>
                <fullName>DNASU Plasmid Repository</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Educational Outreach and Student Services</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>