force-app/main/default/objects/Case_Assignment_Rule__c/fields/CTPVisible__c.field-meta.xml
<CustomField>
    <fullName>CTPVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to display the CAR on the Case Transfer page.</description>
    <inlineHelpText>Use this checkbox to display the Case Assignment Rule on the Case Transfer page. If it is checked, it will appear on the page.</inlineHelpText>
    <label>CTP Is Visible</label>
    <type>Checkbox</type>
</CustomField>