force-app/main/default/objects/Case_Assignment_Rule__c/fields/Customer_Notice_Email_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notice_Email_From_Name__c</fullName>
    <description>[??] - The "Name" associated with the Email Address used  for the notice emailed to the customer that a Case has been created.</description>
    <inlineHelpText>The "Name" associated with the Email Address used  for the notice emailed to the customer that a Case has been created.</inlineHelpText>
    <label>Customer Notice Email From Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>