force-app/main/default/objects/Case_Assignment_Rule__c/fields/Do_Not_Change_in_Sandbox_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Change_in_Sandbox_Refresh__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox that denotes whether to scramble an email when doing a sandbox refresh</description>
    <inlineHelpText>If this box is checked, the corresponding CAR should not be scrambled when refreshing a sandbox.</inlineHelpText>
    <label>Do Not Change in Sandbox Refresh</label>
    <type>Checkbox</type>
</CustomField>