force-app/main/default/objects/Case_Assignment_Rule__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>[??] - Case email address</description>
    <inlineHelpText>This Email Address is used:
1. To identify which Assignment Rule to Use (if this address is found in the "Initial Request Sent To Addresses")
2. As the "From" address for the notice emailed to the customer that a Case has been created.</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>