force-app/main/default/objects/Case_Assignment_Rule__c/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <description>[??] - The 15 character (case sensitive) ID used to identify the Email Template used for the notice emailed to the customer that a Case has been created. You can view this ID immediatly after "...salesforce.com/" in the URL when viewing the desired Template.</description>
    <inlineHelpText>The 15 character (case sensitive) ID used to identify the Email Template used for the notice emailed to the customer that a Case has been created. You can view this ID immediatly after "...salesforce.com/" in the URL when viewing the desired Template.</inlineHelpText>
    <label>Email Template ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>