force-app/main/default/objects/Case_Assignment_Rule__c/fields/Email_Template_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_URL__c</fullName>
    <description>[??] - This is a URL created via a formula. Use this link to verify that the ID entered in the Email Template ID field accurately identifies your desired Template.</description>
    <formula>IF(
LEN(Email_Template_ID__c)&lt;&gt;15
||
LEFT(Email_Template_ID__c,3) &lt;&gt;"00X"
,
"Enter a valid ID in the Email Template ID field"
,
HYPERLINK("/"&amp;Email_Template_ID__c,"Click to View Associated Template")
)</formula>
    <inlineHelpText>This is a URL created via a formula. Use this link to verify that the ID entered in the Email Template ID field accurately identifies your desired Template.</inlineHelpText>
    <label>Email Template URL</label>
    <type>Text</type>
</CustomField>