force-app/main/default/objects/Case_Assignment_Rule__c/fields/Fallback_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Queue_Id__c</fullName>
    <description>Queue ID to fallback to if User ID is inactive</description>
    <inlineHelpText>The 15 character (case sensitive) ID of the Queue used for the fallback (if user is inactive) associated with this Assignment Rule.This ID is shown immediately after "....salesforce.com/p/own/Queue/d?id=" in the URL when viewing the Queue.</inlineHelpText>
    <label>Fallback Queue Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>