force-app/main/default/objects/Case_Assignment_Rule__c/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <description>[??] - Functional Group that is associated with this Case Assignment. Ensure that the value used here exists in Case "Functional Group" Picklist, and that the spelling is identical.</description>
    <inlineHelpText>Enter the Functional Group that is associated with this Case Assignment. Ensure that the value used here exists in Case "Functional Group" Picklist, and that the spelling is identical.</inlineHelpText>
    <label>Functional Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>