force-app/main/default/objects/Case_Assignment_Rule__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>This is the custom label used for the Case Assignment Rule</description>
    <inlineHelpText>This is the custom label used for the Case Assignment Rule</inlineHelpText>
    <label>CTP Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>