force-app/main/default/objects/Case_Assignment_Rule__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>[??] - Where was this Case was initiated</description>
    <inlineHelpText>Where was this Case initiated?</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>