force-app/main/default/objects/Case_Assignment_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>[??] - The Priority for this Case Assignment Rule. It is not possible for two Rules to have the Same Priority.</description>
    <inlineHelpText>Enter the processing Priority for this Case Assignment Rule. It is not possible for two Rules to have the Same Priority.</inlineHelpText>
    <label>Priority</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>