force-app/main/default/objects/Case_Assignment_Rule__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <description>[??] - The 15 character (case sensitive) ID of the Queue or User associated with this Assignment Rule.This ID  is shown immediatly after "....salesforce.com/p/own/Queue/d?id="  in the URL when viewing the Queue or  "...salesforce.com/" when viewing the User.</description>
    <inlineHelpText>The 15 character (case sensitive) ID of the Queue or User associated with this Assignment Rule.This ID  is shown immediatly after "....salesforce.com/p/own/Queue/d?id="  in the URL when viewing the Queue or  "...salesforce.com/" when viewing the User.</inlineHelpText>
    <label>Queue or User ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>