force-app/main/default/objects/Case_Assignment_Rule__c/fields/Queue_URL__c.field-meta.xml
<CustomField>
    <fullName>Queue_URL__c</fullName>
    <description>[??] - This is a URL created via a formula. Use this link to verify that the ID entered in the Queue or User ID field accurately identifies your desired Queue or User.</description>
    <formula>IF(
LEN(Queue_ID__c) &lt;&gt; 15
||
(
LEFT(Queue_ID__c,3) &lt;&gt; "005"
&amp;&amp;
LEFT(Queue_ID__c,3) &lt;&gt; "00G"
)
,
"Enter a valid ID in the Queue or User ID field"
,
IF(LEFT(Queue_ID__c,3) = "005",
HYPERLINK("/"&amp;Queue_ID__c&amp;"?noredirect=1","Click to View Associated User")
,
HYPERLINK("/p/own/Queue/d?id="&amp;Queue_ID__c,"Click to View Associated Queue"))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a URL created via a formula. Use this link to verify that the ID entered in the Queue or User ID field accurately identifies your desired Queue or User.</inlineHelpText>
    <label>Queue or User URL</label>
    <type>Text</type>
</CustomField>