force-app/main/default/objects/Case_Assignment_Rule__c/fields/Receives_Chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Receives_Chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receives Chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>