force-app/main/default/objects/Case_Assignment_Rule__c/fields/Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Email_Address__c</fullName>
    <description>[??] - This Email Address is used as the "Reply To" address for the email that is sent to the customer when a Case has been created. If not specified, the "Email Address" field is used.</description>
    <inlineHelpText>This Email Address is used as the "Reply To" address for the email that is sent to the customer when a Case has been created. If not specified, the "Email Address" field is used.</inlineHelpText>
    <label>Reply To Email Address</label>
    <type>Email</type>
</CustomField>