force-app/main/default/objects/Case_Assignment_Rule__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>[??] - Enter the Sub-Category that is associated with this Case Assignment. Ensure that the value used here exists in Case "Sub-Category" Picklist, and that the spelling is identical.</description>
    <inlineHelpText>Enter the Sub-Category that is associated with this Case Assignment. Ensure that the value used here exists in Case "Sub-Category" Picklist, and that the spelling is identical.</inlineHelpText>
    <label>Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>