force-app/main/default/objects/Case_Assignment_Rule__c/fields/Type_of_Additional_Assignment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Additional_Assignment_Needed__c</fullName>
    <description>Picklist field used to indicate what type of additional assignment is needed for the rule.</description>
    <inlineHelpText>If the Email Address is a group inbox and needs additional assignment, such as routing to a Territory Manager or Enrollment Coach, indicate the additional assignment here.</inlineHelpText>
    <label>Type of Additional Assignment Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Territory Manager</fullName>
            </value>
            <value>
                <fullName>Enrollment Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>