force-app/main/default/objects/Case_Assignment_Rule__c/listViews/ALL_CARs.listView-meta.xml
<ListView>
    <fullName>ALL_CARs</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>Origin__c</columns>
    <columns>Priority__c</columns>
    <columns>CTPVisible__c</columns>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Reply_To_Email_Address__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>Campus__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL CARs</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>