force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Active_Opp_OR_Assign_Needed.listView-meta.xml
<ListView>
    <fullName>CAR_Active_Opp_OR_Assign_Needed</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Type_of_Additional_Assignment_Needed__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Origin__c</columns>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associate_Case_to_Active_Opportunity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type_of_Additional_Assignment_Needed__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CAR - Active Opp OR Assign Needed</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>