force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Admission_Svc_RT.listView-meta.xml
<ListView>
    <fullName>CAR_Admission_Svc_RT</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Priority__c</columns>
    <columns>CTPVisible__c</columns>
    <columns>Email_Address__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Type_of_Additional_Assignment_Needed__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Record_Type_Id__c</field>
        <operation>equals</operation>
        <value>Case.ASU_Admission_Services</value>
    </filters>
    <label>CAR - Admission Svc RT</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>