force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Case_Transfer_Page.listView-meta.xml
<ListView>
    <fullName>CAR_Case_Transfer_Page</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>CTPVisible__c</columns>
    <columns>CTPColumn__c</columns>
    <columns>CTPGroup__c</columns>
    <columns>Label__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CTPVisible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CAR - Case Transfer Page</label>
    <sharedTo>
        <group>UTO_Administration</group>
        <role>UTO_University_Technology_Office</role>
    </sharedTo>
</ListView>