force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Chat.listView-meta.xml
<ListView>
    <fullName>CAR_Chat</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Priority__c</columns>
    <columns>Do_Not_Change_in_Sandbox_Refresh__c</columns>
    <columns>Email_Address__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>Campus__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>equals</operation>
        <value>Chat</value>
    </filters>
    <label>CAR - Chat</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>