force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Email_Template_Auto_Resp_Custom.listView-meta.xml
<ListView>
    <fullName>CAR_Email_Template_Auto_Resp_Custom</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Priority__c</columns>
    <columns>CTPVisible__c</columns>
    <columns>Email_Address__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Campus__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Template_ID__c</field>
        <operation>notEqual</operation>
        <value>00Xd0000001NLbC</value>
    </filters>
    <filters>
        <field>Email_Template_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CAR - Email Template Auto-Resp (Custom)</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>