force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_Exchange.listView-meta.xml
<ListView>
    <fullName>CAR_Exchange</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Priority__c</columns>
    <columns>CTPVisible__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Reply_To_Email_Address__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>Campus__c</columns>
    <columns>CC_Category__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Queue_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Address__c</field>
        <operation>contains</operation>
        <value>@exchange.asu.edu</value>
    </filters>
    <label>CAR - Exchange Email Addresses</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>