force-app/main/default/objects/Case_Assignment_Rule__c/listViews/CAR_My_ASU.listView-meta.xml
<ListView>
    <fullName>CAR_My_ASU</fullName>
    <columns>Case_Record_Type_Id__c</columns>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>Associate_Case_to_Active_Opportunity__c</columns>
    <columns>Origin__c</columns>
    <columns>Campus__c</columns>
    <columns>CC_Sub_Category__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Email_Template_URL__c</columns>
    <columns>Queue_ID__c</columns>
    <columns>Queue_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>equals</operation>
        <value>My ASU</value>
    </filters>
    <label>CAR - My ASU</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>